force-app/main/default/objects/Map_Extension__c/Map_Extension__c.object-meta.xml
<CustomObject>
    <label>Map Extension</label>
    <nameField>
        <displayFormat>ME-{000000}</displayFormat>
        <label>Map Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Extension</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>