force-app/main/default/objects/Map_Extension__c/fields/Funding_Upfront_fees__c.field-meta.xml
<CustomField>
    <fullName>Funding_Upfront_fees__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Funding Upfront fees</label>
    <type>Checkbox</type>
</CustomField>