force-app/main/default/objects/Map_Extension__c/fields/Map_extension_type__c.field-meta.xml
<CustomField>
    <fullName>Map_extension_type__c</fullName>
    <label>Map extension type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factoring / Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>In Transit Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>