force-app/main/default/objects/Map_Extension__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipLabel>Maps Extension</relationshipLabel>
    <relationshipName>Maps_Extension</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>